--- a/public/partials/todo.htm
+++ b/public/partials/todo.htm
@@ -1,20 +1,27 @@
-<h1>ToDo {{name}}</h1>
-
+<p>
+  <a href="/#"><< Back</a>
+</p>
+<h1>Todo: {{todo.text}}</h1>
 <ul>
-  <li data-ng-repeat="entry in entries | objectOrderByFilter:'done':true">
-    <input type="checkbox" ng-model="entry.done">
-    <input type="text" ng-model="entry.text">
-    <button ng-click="delete(entry)">delete</button>
+  <li>
+    <label>
+      text
+      <input type="text" ng-model="todo.text"/>
+    </label>
+  </li>
+  <li>
+    <label>
+      done
+      <input type="checkbox" ng-model="todo.done"/>
+    </label>
+  </li>
+  <li>
+    <label>notes</label>
+    <textarea ng-model="todo.notes"></textarea>
   </li>
 </ul>
 
-Add new entry:
-<form data-ng-submit="add()">
-  <dl>
-    <dt>Text:</dt>
-    <dd>
-      <input ng-model="newInput" type="text"></dd>
-    <dd>
-      <input type="submit"></dd>
-  </dl>
-</form>
+
+
+
+
