--- a/public/partials/todo.htm
+++ b/public/partials/todo.htm
@@ -1,7 +1,7 @@
 <p>
   <a href="/#"><< Back</a>
 </p>
-<h1>Todo: {{todo.text}}</h1>
+<h1>Todo: {{nameDoneText}}</h1>
 <ul>
   <li>
     <label>
@@ -18,6 +18,17 @@
   <li>
     <label>notes</label>
     <textarea ng-model="todo.notes"></textarea>
+  </li>
+  <li>
+    <ul>
+      <li ng-repeat="tag in todo.tags">
+        <span>{{ tag }}</span>
+        <button ng-click="deleteTag(tag)">Delete</button>
+      </li>
+    </ul>
+    <div ng-if="!todo.tags.length">--- No Tags --- </div>
+    <input ng-model="newTag" placeholder="Add new tag...">
+    <button ng-click="addTag()">Add</button>
   </li>
 </ul>
 
